<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        
        <TextView
            android:id="@+id/username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/username"
            android:layout_alignBottom="@+id/username"
            android:layout_alignParentStart="true"
            android:text="@string/username_label_text" 
            android:textSize="20sp"/>
        
        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/username_label"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="textPersonName" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/password"
            android:layout_alignBottom="@+id/password"
            android:layout_alignParentStart="true"
            android:text="@string/password_label_text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/password_label"
            android:ems="10"
            android:hint="@string/password_hint" 
            android:inputType="textPassword"/>

    </RelativeLayout>



   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content" 
       android:layout_marginTop="40dp">

       <Button
           android:id="@+id/register"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentStart="true"
           android:layout_alignParentTop="true"
           android:layout_marginStart="21dp"
           android:text="@string/btn_register" />

       <Button
           android:id="@+id/login"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentTop="true"
           android:layout_marginStart="69dp"
           android:layout_toEndOf="@+id/register"
           android:text="@string/btn_login" />

   </RelativeLayout>
   
</LinearLayout>
